# simon-game-js

./: .gitignore  jatos-template.html  jspsych-plugin-simon-game.js  jspsych-simon-example.js  jspsych-simon-extended-example.js  package.json  parameters.txt  run-tests.js  webpack.config.cjs  webpack.config.js
.github/workflows/: cmake-build-and-test-output-to-csv.yml  create-release.yml  run-tests.yml
jspsych/: black-squares.js  colored-circles.js  feedback.js  main-black-squares.js  main.js  minimal.js  plugin.js  shuffled-colors.js  utility.js
jspsych/main/: black-squares-with-button-advancing-screen.js  black-squares.js  colored-circles-with-button-advancing-screen.js  colored-circles.js  minimal.js
jspsych/main/jatos/: .eslintrc.json  black-squares.js  colored-circles.js  practice-black-squares.js  practice-with-demo.js  practice.js
jspsych/main/practice/: black-squares.js  colored-circles.js
lib/: AudioPlayer.js  Color.js  ParametersFileParser.js  ScreenPresenter.js  ScreenResponder.js  Simon.js  index.js
output-to-csv/: .clang-format  .gitignore  CMakeLists.txt  main.cpp
output-to-csv/lib/: CMakeLists.txt  Conversion.cpp
output-to-csv/lib/include/simon-game-js/output-to-csv/: Conversion.hpp
output-to-csv/test/: CMakeLists.txt  Conversion.cpp  Conversion.hpp  main.cpp
spec/: AudioPlayer.js  ParametersFileParser.js  ScreenPresenter.js  ScreenResponder.js  Simon.js
